--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,43 @@
+atomicwrites==1.4.0
+attrs==21.2.0
+Brotli==1.0.9
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.8
 click==7.1.2
+colorama==0.4.4
+ConfigArgParse==1.5.3
+coverage==6.2
 Flask==1.1.2
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
+gevent==21.8.0
+geventhttpclient==1.5.3
+greenlet==1.1.2
+idna==3.3
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+locust==1.2.3
 MarkupSafe==1.1.1
+msgpack==1.0.3
+packaging==21.3
+pluggy==1.0.0
+psutil==5.8.0
+py==1.11.0
+pycparser==2.21
+pyparsing==3.0.6
+pytest==6.2.5
+pytest-mock==3.6.1
+python-dotenv==0.19.2
+pywin32==302
+pyzmq==22.3.0
+requests==2.26.0
+roundrobin==0.0.2
+six==1.16.0
+toml==0.10.2
+typing-extensions==4.0.1
+urllib3==1.26.7
 Werkzeug==1.0.1
+zope.event==4.5.0
+zope.interface==5.4.0
